test/net/router: adding vmxnet as driver

--- a/test/net/integration/router/CMakeLists.txt
+++ b/test/net/integration/router/CMakeLists.txt
@@ -13,7 +13,7 @@ set(SERVICE_NAME "Routing test service")
 set(BINARY       "test_router")
 set(MAX_MEM 128)
 set(SOURCES service.cpp)
-set(DRIVERS virtionet) #vmxnet3
+set(DRIVERS virtionet vmxnet3) #vmxnet3
 
 # include service build script
 include($ENV{INCLUDEOS_PREFIX}/includeos/post.service.cmake)
